# Beetle

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: AddBeetleTest.cmake  beetle-config-version.cmake  beetle-config.cmake  version.hpp.in
include/beetle/: assert.hpp  beetle.hpp  code_unit.hpp  exception.hpp  iterator.hpp  precondition.hpp  types.hpp  utf8.hpp  validate.hpp
include/beetle/char/: algorithm.hpp  char.hpp  fixed_character.hpp  iterator.hpp  validate.hpp
include/beetle/code_unit/: exception.hpp
include/beetle/core/: assert.hpp  error_code.hpp  exception.hpp  iterator.hpp  result.hpp  types.hpp
include/beetle/unicode/: code_point.hpp  endian.hpp  unicode.hpp
include/beetle/utf8/: algorithm.hpp  error.hpp  exception.hpp  iterator.hpp
src/: CMakeLists.txt  exception.cpp  main.cpp
src/code_unit/: CMakeLists.txt  exception.cpp
src/core/: CMakeLists.txt  assert.cpp  precondition.cpp
src/core/internal/: CMakeLists.txt  assert.cpp  assert.hpp  macro_helpers.hpp
src/unicode/: code_point.cpp
src/utf8/: CMakeLists.txt  error.cpp
src/utf8/internal/: CMakeLists.txt  code_unit.hpp  dfa.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  code_unit_test.cpp  validate_test.cpp
tests/unit/unicode/: CMakeLists.txt  unicode_test.cpp
tests/unit/utf8/: CMakeLists.txt  algorithm_test.cpp
